--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-# Created by https://www.gitignore.io/api/java,eclipse
+# Created by https://www.gitignore.io/api/maven,eclipse
 
 ### Eclipse ###
 
@@ -15,9 +15,6 @@ local.properties
 .loadpath
 .recommenders
 
-# Eclipse Core
-.project
-
 # External tool builders
 .externalToolBuilders/
 
@@ -29,9 +26,6 @@ local.properties
 
 # CDT-specific (C/C++ Development Tooling)
 .cproject
-
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
 
 # Java annotation processor (APT)
 .factorypath
@@ -54,28 +48,23 @@ local.properties
 # Code Recommenders
 .recommenders/
 
-### Java ###
-# Compiled class file
-*.class
+# Scala IDE specific (Scala & Java development for Eclipse)
+.cache-main
+.scala_dependencies
+.worksheet
 
-# Log file
-*.log
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
 
-# BlueJ files
-*.ctxt
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# End of https://www.gitignore.io/api/java,eclipse
+# End of https://www.gitignore.io/api/maven,eclipse
